# PlutusExperience

./: .gitignore  README.md  flake.nix  slide
.github/workflows/: test.yml  update-flake-lock.yml
episodes/01-plutus-playground/: README.md  cowsay.nix  disqualified.nix  slides.md
episodes/08-bring-it-on/: .gitignore  README.md  flake.nix  index.js  package-lock.json  package.json  slides.md  webpack.config.js
episodes/08-bring-it-on/src/: Donation.purs  Main.purs
modules/01-plutus-emulator/: 01-plutus-emulator.cabal  README.md  flake.nix
modules/01-plutus-emulator/src/: Emulator.hs
modules/01-plutus-playground/: README.md  build-cowsay.sh
modules/08-bring-it-on/: README.md  index.html  webpack.config.js
modules/08-bring-it-on/src/: Donation.purs
modules/M01-plutus-emulator/: M01-plutus-emulator.cabal  README.md  flake.nix  hie.yaml
modules/M02-purescript-foundations/: README.md
modules/M03-our-first-web-app/: .gitignore  README.md  flake.nix  index.html
modules/M03-our-first-web-app/src/: Form.purs  Main.js  Main.purs
modules/M04-we-should-have-a-map/: README.md  flake.nix
modules/M04-we-should-have-a-map/src/: Main.purs
modules/M05-burritos-everywhere/: README.md  flake.nix
modules/M06-building-smart-contracts/: README.md  flake.nix
modules/M07-jupiter/: .gitignore  README.md  flake.nix  index.html
modules/M08-bring-it-on/: .gitignore  README.md  flake.nix  package-lock.json  package.json  webpack.config.js
modules/M09-going-live/: README.md
modules/M09-going-live/contract/: cabal.project  flake.nix  hello.cabal
modules/M09-going-live/contract/nix/: hix.nix  serve-docs.nix
modules/M09-going-live/contract/src/: hello.hs
modules/M10-a-vesting-contract/: README.md
modules/M10-a-vesting-contract-i/: README.md
modules/M10-a-vesting-contract/contract/: flake.nix  hor-plutus.cabal  vesting-contract.cabal
modules/M10-a-vesting-contract/contract/src/: Vesting.hs
modules/M11-a-vesting-contract-ii/: README.md
modules/M12-non-fingible-tokens/: README.md
modules/M12-non-fungible-tokens/: README.md
modules/M12-non-fungible-tokens/contract/: flake.nix  minting-policy.cabal
modules/M12-non-fungible-tokens/contract/nix/: serve-docs.nix
modules/M12-non-fungible-tokens/contract/src/: Main.hs  Minting.hs
(+73 files in other folders)
