cabal-version:      3.6
name:               M01-plutus-emulator
version:            0.0.1

author:             Walker
maintainer:         walker@praiseweb.com.br

library
   default-language: Haskell2010
   exposed-modules:
      Emulator
   hs-source-dirs:   src
   build-depends:
      base, 
      containers,
      text
